--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/NonASCII.java=UTF-8
 encoding//src/finalLeap/MinCostToAddNewRoads.java=UTF-8
 encoding//src/finalLeap/MinCostToAddNewRoads2.java=UTF-8
 encoding//src/finalLeapP1/ACopy.java=UTF-8
